--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.6",
     "axios": "^1.1.3",
+    "concurrently": "^7.5.0",
     "cors": "^2.8.5",
     "eslint": "8.22.0",
     "express": "^4.18.2",
@@ -15,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-loader-spinner": "^5.3.4",
+    "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
@@ -27,7 +30,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "server": "json-server -p 3001 --watch database/db.json",
-    "fileServer": "nodemon server/server.js"
+    "fileServer": "nodemon server/server.js",
+    "fullStart": "concurrently \"npm run server\" \"npm start\""
   },
   "eslintConfig": {
     "extends": [
